--- a/FDM/Makefile
+++ b/FDM/Makefile
@@ -48,8 +48,10 @@ $(TARGET): $(OFILES)
 
 all: $(TARGET)
 
-dep:                                 
-	$(CC) -MM *.c > depend                     
+# depend:
+# 	$(CC) -MM *.c > depend                     
+
+dep: depend
 
 clean:
 	rm -f *.o $(TARGET) lib*.a *~ core
@@ -67,6 +69,9 @@ flight.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.7  1997/06/27 20:03:34  curt
+# Working on Makefile structure.
+#
 # Revision 1.6  1997/06/26 19:08:30  curt
 # Restructuring make, adding automatic "make dep" support.
 #
