--- a/Slew/Makefile
+++ b/Slew/Makefile
@@ -48,8 +48,8 @@ $(TARGET): $(OFILES)
 
 all: $(TARGET)
 
-dep:                                 
-	$(CC) -MM *.c > depend                     
+# depend:
+# 	$(CC) -MM *.c > depend                     
 
 clean:
 	rm -f *.o $(TARGET) lib*.a *~ core
@@ -67,6 +67,9 @@ slew.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1997/06/27 20:03:36  curt
+# Working on Makefile structure.
+#
 # Revision 1.4  1997/06/26 19:08:31  curt
 # Restructuring make, adding automatic "make dep" support.
 #
