--- a/Simulator/Makefile
+++ b/Simulator/Makefile
@@ -24,74 +24,7 @@
 #---------------------------------------------------------------------------
 
 
-#---------------------------------------------------------------------------
-# Choose your weapon
-#---------------------------------------------------------------------------
-
-CC = gcc
-export CC
-
-
-#---------------------------------------------------------------------------
-# Global Compile Options
-#
-# You may set FG_CFLAGS to include any of the following options depending on 
-# your environment:
-#
-# -g           - Compile with debugging symbols
-#
-# -Wall        - Enable full compiler warnings
-#
-# -O2          - Enable compiler optimization
-#
-# -DUSE_ITIMER - Use setitimer(), getitimer(), and signal() to mimic
-#                a real time system and call the flight model routines
-#                at a regular interval, rather than between screen updates
-#                which can be highly variable.  This can make the flight
-#                much smoother.
-#---------------------------------------------------------------------------
-
-FG_CFLAGS = -g -Wall -DUSE_ITIMER
-export FG_CFLAGS
-
-
-#---------------------------------------------------------------------------
-# Uncomment one of the following sections depending on your system
-#
-# You may set FG_GRAPHICS to include any of the following options depending
-# on your environment:
-#---------------------------------------------------------------------------
-
-#---------------------------------------------------------------------------
-# SGI IRIX with the GLUT toolkit
-#
-# INTERFACE_FLAGS = -DGLUT
-# INTERFACE_LIBS = -lglut
-# INTERFACE_FILES = GLUTkey.c
-# GRAPHICS_LIBS = -lGLU -lGL -lXmu -lX11
-#---------------------------------------------------------------------------
-
-#---------------------------------------------------------------------------
-# Linux/Mesa with the GLUT toolkit
-#
-INTERFACE_FLAGS = -DGLUT
-INTERFACE_LIBS = -lglut
-INTERFACE_FILES = GLUTkey.c
-MESA_LIBS = -L/usr/lib/mesa -lMesatk -lMesaaux -lMesaGLU -lMesaGL
-X11_LIBS =  -L/usr/X11R6/lib -lXext -lXmu -lXi -lX11
-GRAPHICS_LIBS = $(MESA_LIBS) $(X11_LIBS)
-#---------------------------------------------------------------------------
-
-#---------------------------------------------------------------------------
-# Windows 95/NT with the GLUT toolkit
-#
-# INTERFACE_FLAGS = -DGLUT
-# INTERFACE_LIBS = -lglut
-# INTERFACE_FILES = GLUTkey.c
-# GRAPHICS_LIBS = -lGLU -lGL
-#---------------------------------------------------------------------------
-
-export INTERFACE_FLAGS INTERFACE_LIBS GRAPHICS_LIBS
+include make.inc
 
 
 #---------------------------------------------------------------------------
@@ -142,6 +75,9 @@ tar: clean
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.12  1997/06/27 21:37:59  curt
+# Working on Makefile structure.
+#
 # Revision 1.11  1997/06/27 20:03:31  curt
 # Working on Makefile structure.
 #
