--- a/Math/Makefile
+++ b/Math/Makefile
@@ -30,14 +30,11 @@ CFILES = MAT3geom.c MAT3inv.c MAT3mat.c MAT3vec.c
 HFILES = mat3.h mat3defs.h mat3err.h
 OFILES = $(CFILES:.c=.o)
 
-CC = gcc
+
+include ../make.inc
+
+
 CFLAGS = $(FG_CFLAGS)
-
-AR = ar
-
-INCLUDES = 
-
-LIBS = 
 
 
 #---------------------------------------------------------------------------
@@ -48,9 +45,6 @@ $(TARGET): $(OFILES) $(HFILES)
 	$(AR) rv $(TARGET) $(OFILES)
 
 all: $(TARGET)
-
-# depend:
-# 	$(CC) -MM *.c > depend                     
 
 clean:
 	rm -f *.o $(TARGET) lib*.a *~ core
@@ -65,6 +59,9 @@ include depend
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.6  1997/06/27 21:38:14  curt
+# Working on Makefile structure.
+#
 # Revision 1.5  1997/06/27 20:03:40  curt
 # Working on Makefile structure.
 #
