--- a/Controls/Makefile
+++ b/Controls/Makefile
@@ -43,6 +43,7 @@ CFLAGS = $(FG_CFLAGS)
 
 $(TARGET): $(OFILES)
 	$(AR) rv $(TARGET) $(OFILES)
+	$(RANLIB) $(TARGET)
 
 all: $(TARGET)
 
@@ -62,6 +63,9 @@ controls.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.9  1997/07/12 02:24:45  curt
+# Added ranlib.
+#
 # Revision 1.8  1997/06/27 21:38:03  curt
 # Working on Makefile structure.
 #
