--- a/Time/Makefile
+++ b/Time/Makefile
@@ -43,6 +43,7 @@ CFLAGS = $(FG_CFLAGS)
 
 $(TARGET): $(OFILES)
 	$(AR) rv $(TARGET) $(OFILES)
+	$(RANLIB) $(TARGET)
 
 all: $(TARGET)
 
@@ -62,6 +63,9 @@ fg_timer.o:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.7  1997/07/12 02:24:48  curt
+# Added ranlib.
+#
 # Revision 1.6  1997/06/27 21:38:13  curt
 # Working on Makefile structure.
 #
