--- a/Controls/Makefile
+++ b/Controls/Makefile
@@ -48,7 +48,7 @@ $(TARGET): $(OFILES)
 all: $(TARGET)
 
 clean:
-	rm -f *.o $(TARGET) lib*.a *~ core
+	rm -f *.o $(TARGET) lib*.a *.os2 *~ core
 
 
 #---------------------------------------------------------------------------
@@ -58,11 +58,14 @@ clean:
 include depend
 
 controls.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -c controls.c
+	$(CC) $(CFLAGS) $(INCLUDES) -c controls.c -o $@
 
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.10  1997/07/20 02:19:10  curt
+# First stab at a system to generate os2 makefiles automatically.
+#
 # Revision 1.9  1997/07/12 02:24:45  curt
 # Added ranlib.
 #
