--- a/Slew/Makefile
+++ b/Slew/Makefile
@@ -47,7 +47,7 @@ $(TARGET): $(OFILES)
 all: $(TARGET)
 
 clean:
-	rm -f *.o $(TARGET) lib*.a *~ core
+	rm -f *.o $(TARGET) lib*.a *.os2 *~ core
 
 
 #---------------------------------------------------------------------------
@@ -57,11 +57,14 @@ clean:
 include depend
 
 slew.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -c slew.c
+	$(CC) $(CFLAGS) $(INCLUDES) -c slew.c -o $@
 
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.8  1997/07/20 02:19:10  curt
+# First stab at a system to generate os2 makefiles automatically.
+#
 # Revision 1.7  1997/07/12 02:24:49  curt
 # Added ranlib.
 #
