--- a/Math/Makefile
+++ b/Math/Makefile
@@ -47,7 +47,7 @@ $(TARGET): $(OFILES)
 all: $(TARGET)
 
 clean:
-	rm -f *.o $(TARGET) lib*.a *~ core
+	rm -f *.o $(TARGET) lib*.a *.os2 *~ core
 
 
 #---------------------------------------------------------------------------
@@ -56,12 +56,27 @@ clean:
 
 include depend
 
+MAT3geom.o:
+	$(CC) $(CFLAGS) -c $< -o $@
+
+MAT3inv.o:
+	$(CC) $(CFLAGS) -c $< -o $@
+
+MAT3mat.o:
+	$(CC) $(CFLAGS) -c $< -o $@
+
+MAT3vec.o:
+	$(CC) $(CFLAGS) -c $< -o $@
+
 polar.o:
-	$(CC) $(CFLAGS) -c polar.c
+	$(CC) $(CFLAGS) -c polar.c -o $@
 
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.10  1997/07/20 02:19:11  curt
+# First stab at a system to generate os2 makefiles automatically.
+#
 # Revision 1.9  1997/07/12 02:24:46  curt
 # Added ranlib.
 #
