--- a/Simulator/Makefile
+++ b/Simulator/Makefile
@@ -29,7 +29,7 @@ include make.inc
 
 SUBSUBDIRS = Flight/LaRCsim Flight/Slew
 SUBDIRS = Aircraft Controls Flight Math Scenery Time Weather
-MAIN = OpenGL
+MAIN = GLUT
 
 
 all: 
@@ -71,6 +71,9 @@ zip: clean
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.23  1997/08/13 20:22:55  curt
+# Renamed OpenGL/ to GLUT/
+#
 # Revision 1.22  1997/07/31 22:52:21  curt
 # Working on redoing internal coordinate systems & scenery transformations.
 #
